fix(race): fix footer overlap

--- a/src/app/pages/race/race.component.scss
+++ b/src/app/pages/race/race.component.scss
@@ -157,7 +157,7 @@
 
         .retro-footer {
             padding: 0.5rem;
-            width: inherit;
+            width: calc(100% - 1rem);
             .retro-button {
                 margin-bottom: 1rem;
             }
